# sps2

./: .gitattributes  .gitignore  ARCHITECTURE.md  BUILD_SCRIPT_DOCUMENTATION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  HASH_MIGRATION_SUMMARY.md  LICENSE.md  README.md  SECURITY.md  STARLARK_API_DOCUMENTATION.md  TODO.md  VENV_CLEANUP_IMPLEMENTATION.md  WARP.md  bat-0.25.0-1.arm64.sp  diff  justfile  m4-1.4.20-1.arm64.sp  ops-94.md  ops-97.md  refactor.md  ripgrep-14.1.1-1.arm64.sp  setup.sh  test_percentile.rs  whifile
apps/sbs/: Cargo.toml
apps/sbs/src/: main.rs
apps/sls/: Cargo.toml
apps/sls/src/: main.rs
apps/sps2/: Cargo.toml
apps/sps2/src/: cli.rs  display.rs  error.rs  events.rs  logging.rs  main.rs  setup.rs
apps/sps2/tests/: integration.rs
crates/audit/: Cargo.toml
crates/audit/src/: lib.rs  sbom_parser.rs  scanner.rs  types.rs  vulndb.rs
crates/audit/tests/: integration.rs
crates/builder/: Cargo.toml  IMPROVEMENTS.md
crates/builder/src/: api.rs  build_plan.rs  builder.rs  cache.rs  compression.rs  config.rs  cross.rs  environment.rs  environment.rs.bak  fileops.rs  format.rs  lib.rs  manifest.rs  packaging.rs  quality.rs  recipe.rs  sbom.rs  signing.rs  staged_executor.rs  starlark_bridge.rs  workflow.rs
crates/builder/tests/: integration.rs  lib.rs
crates/config/: Cargo.toml
crates/config/src/: builder.rs  constants.rs  core.rs  guard.rs  lib.rs  repository.rs  resources_limits.rs  resources_manager.rs  resources_semaphore.rs
crates/config/tests/: integration.rs
crates/drafter/: Cargo.toml
crates/drafter/src/: archive.rs  detector.rs  lib.rs  metadata.rs  source.rs  template.rs  yaml.rs
crates/drafter/templates/: recipe.star.tera
crates/errors/: Cargo.toml
crates/errors/src/: audit.rs  build.rs  config.rs  guard.rs  install.rs  lib.rs  network.rs  ops.rs  package.rs  platform.rs  signing.rs  state.rs  storage.rs  structured.rs  version.rs
crates/errors/tests/: integration.rs
crates/events/: Cargo.toml
crates/events/src/: lib.rs  meta.rs  progress.rs
crates/events/tests/: integration.rs
crates/guard/: Cargo.toml
crates/guard/src/: cache.rs  diagnostics.rs  error_context.rs  lib.rs  refcount.rs  store.rs  store_verification.rs  types.rs  verifier.rs
crates/hash/: Cargo.toml
crates/hash/src/: file_hasher.rs  lib.rs  tests.rs
crates/hash/tests/: MIGRATION_COMPLETE.md  README.md  dual_hash_demo.rs  integration.rs  test_dual_hash.rs  test_hash_migration.rs  test_hash_migration.sh  verify_migration.sh
crates/index/: Cargo.toml
crates/index/src/: cache.rs  lib.rs  models.rs
crates/index/tests/: integration.rs
crates/install/: Cargo.toml
crates/install/src/: atomic.rs  installer.rs  lib.rs  macros.rs  operations.rs  parallel.rs  pipeline.rs  python.rs  python_test.rs  staging.rs  validation.rs
crates/install/tests/: integration.rs  test_content_addressable_storage.rs  test_install_records_packages.rs  test_venv_cleanup.rs
crates/manifest/: Cargo.toml
crates/manifest/src/: lib.rs
crates/manifest/tests/: integration.rs
crates/net/: Cargo.toml
crates/net/src/: client.rs  download.rs  lib.rs  package_download.rs  signing.rs
crates/net/tests/: integration.rs
crates/ops/: Cargo.toml
crates/ops/src/: build.rs  context.rs  draft.rs  health.rs  install.rs  keys.rs  large_ops.rs  lib.rs  maintenance.rs  pack.rs  query.rs  repository.rs  security.rs  self_update.rs  small_ops.rs  types.rs  uninstall.rs  update.rs  upgrade.rs
crates/ops/tests/: integration.rs
crates/package/: Cargo.toml
crates/package/src/: api.rs  error_helpers.rs  lib.rs  recipe.rs  sandbox.rs  starlark_api.rs
crates/package/tests/: integration.rs
crates/platform/: Cargo.toml
crates/platform/src/: fs.rs  lib.rs
crates/progress/: Cargo.toml
crates/progress/src/: lib.rs
crates/repository/: Cargo.toml
crates/repository/src/: lib.rs
crates/resolver/: Cargo.toml
crates/resolver/src/: execution.rs  graph.rs  lib.rs  resolver.rs
crates/resolver/tests/: integration.rs
crates/resources/: Cargo.toml
crates/resources/src/: lib.rs  limits.rs  manager.rs  semaphore.rs
crates/root/: Cargo.toml
crates/root/src/: lib.rs
crates/root/tests/: integration.rs
crates/signing/: Cargo.toml
crates/signing/src/: lib.rs
crates/state/: Cargo.toml  VENV_TRACKING.md  build.rs
crates/state/.sqlx/: query-0780bc846732438c1ee663c64e4afe28f9a4632790f70ed7625b0a0393bbc312.json  query-1047bd1733acb096d59913a1cb90d917b4dee607bc050f5a956c6680e767f296.json  query-310a912bc2185f47a10faf0a857de79eb53de1ccbb1f5013c60f59573469d6bd.json  query-392a0d1ece536dacbaef4f8548f83050368cfd33377768b89c996207da3be636.json  query-57112e1d543d000235c97b50b4a0102bd68a5cc7737bd50bfde01d2bf06681d7.json  query-5f23fba33f8182bea8d3786016f1e2f0f9069252a338b480e311b7d54428342f.json  query-690ab6cf48914b6e3835bd9e52a0b501e54a84f4f274f365b17957d525352331.json  query-aeeeb9cceae4869a550d245f5a40ea14990fe5c38ba1a00197b2d7db27928f7c.json  query-d04a77f2016988074571fe1bd0cfb25994648830f6bdc8f0dd44d1228d8989c7.json  query-dc918a2f30da135190941fc0c510d2f816c69d69e537ec1f9d6199cdc32e1024.json  query-f35cae097fa1f95f43f6938406407ea0f4d411c9e67a39fe38e38a36f2801979.json  query-ffb959b16c71fd5fa489285793c802c3673f90759519d5e64bc3138811cb8fe4.json
crates/state/migrations/: 0001_initial_schema.sql  0001_initial_schema_v2.sql  0002_add_build_deps.sql  0003_add_package_files.sql  0004_add_venv_tracking.sql  0005_add_package_map.sql  0006_add_file_level_hashes.sql  0007_store_verification_tracking.sql  0008_cas_eviction_logs.sql  0009_add_pruned_at.sql  0010_add_package_hash.sql
crates/state/src/: file_migration.rs  lib.rs  (+8 more)
crates/store/: Cargo.toml
crates/types/: Cargo.toml
tests/: Cargo.toml  README.md  download_tests.rs  integration.rs  integration_install.rs  integration_new.rs  test_runner.sh
tests/common/: mock_server.rs  mod.rs  network_simulation.rs  package_generator.rs  repo_simulation.rs  test_helpers.rs
tests/download/: concurrent.rs  mod.rs  progress.rs  retry.rs
tests/integration/: common.rs  mod.rs  parsing.rs  store.rs  system.rs
(+531 files in other folders)
