[workspace]
resolver = "3"
members = [
    "apps/sps2",
    "apps/sls",
    "apps/sbs",
    "crates/builder",
    "crates/config",
    "crates/errors",
    "crates/events",
    "crates/guard",
    "crates/hash",
    "crates/index",
    "crates/install",

    "crates/net",
    "crates/ops",
    "crates/platform",
    "crates/repository",
    "crates/resolver",

    "crates/state",
    "crates/store",
    "crates/types",
]

[workspace.package]
edition = "2021"
rust-version = "1.90.0"
authors = ["sps2 Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/org/sps2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.47.1", features = ["full"] }

# Database0.8.6
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "sqlite",
    "macros",
    "migrate",
] }

# HTTP0.12.20
reqwest = { version = "0.12.23", features = ["json", "stream"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.8"

# Error handl2.0.12
thiserror = "2.0.17"

# Utilities
uuid = { version = "1.18.1", features = ["v4", "serde"] }
semver = { version = "1.0.27", features = ["serde"] }
blake3 = "1.8.2"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
tracing = "0.1.41"
chrono = { version = "0.4.42", features = ["serde"] }
minisign-verify = "0.2.4"

# Concurren6.1.0a structures
dashmap = "6.1.0"
crossbeam = "0.8.4"

clap = { version = "4.5.48", features = ["derive", "env"] }

tar = "0.4.44"

tempfile = "3.22.0"
proptest = "1.8.0"
futures = "0.3.31"
