[package]
name = "spsv2-integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[[test]]
name = "integration"
path = "integration.rs"

[dependencies]
# Internal crates
spsv2-audit = { path = "../crates/audit" }
spsv2-builder = { path = "../crates/builder" }
spsv2-config = { path = "../crates/config" }
spsv2-errors = { path = "../crates/errors" }
spsv2-events = { path = "../crates/events" }
spsv2-hash = { path = "../crates/hash" }
spsv2-index = { path = "../crates/index" }
spsv2-install = { path = "../crates/install" }
spsv2-manifest = { path = "../crates/manifest" }
spsv2-net = { path = "../crates/net" }
spsv2-ops = { path = "../crates/ops" }
spsv2-package = { path = "../crates/package" }
spsv2-resolver = { path = "../crates/resolver" }
spsv2-root = { path = "../crates/root" }
spsv2-state = { path = "../crates/state" }
spsv2-store = { path = "../crates/store" }
spsv2-types = { path = "../crates/types" }

# External dependencies
tokio = { version = "1.36", features = ["full"] }
tempfile = "3.9"
serde_json = "1.0"
toml = "0.8"
futures = "0.3"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }