[package]
name = "sps2-integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[[test]]
name = "integration"
path = "integration.rs"

[[test]]
name = "download_tests"
path = "download_tests.rs"

[[test]]
name = "integration_install"
path = "integration_install.rs"

[dependencies]
# Internal crates
sps2-audit = { path = "../crates/audit" }
sps2-builder = { path = "../crates/builder" }
sps2-config = { path = "../crates/config" }
sps2-errors = { path = "../crates/errors" }
sps2-events = { path = "../crates/events" }
sps2-hash = { path = "../crates/hash" }
sps2-index = { path = "../crates/index" }
sps2-install = { path = "../crates/install" }
sps2-manifest = { path = "../crates/manifest" }
sps2-net = { path = "../crates/net" }
sps2-ops = { path = "../crates/ops" }
sps2-package = { path = "../crates/package" }
sps2-resolver = { path = "../crates/resolver" }
sps2-root = { path = "../crates/root" }
sps2-state = { path = "../crates/state" }
sps2-store = { path = "../crates/store" }
sps2-types = { path = "../crates/types" }

# External dependencies
tokio = { version = "1.45.1", features = ["full"] }
tempfile = "3.20.0"
serde_json = "1.0.140"
toml = "0.8.22"
futures = "0.3.31"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "sqlite",
    "macros",
    "migrate",
] }
async-compression = { version = "0.4.20", features = ["tokio", "zstd"] }
tar = "0.4.43"
httpmock = "0.7.0"
rand = "0.8"
uuid = { version = "1.11.0", features = ["v4"] }
blake3 = "1.5.5"
reqwest = "0.12"
