[package]
name = "sbs"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "sbs"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive"] }
sps2-errors = { path = "../../crates/errors" }
sps2-repository = { path = "../../crates/repository" }
sps2-net = { path = "../../crates/net" }
tokio = { workspace = true, features = ["fs", "rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
minisign = "0.8.0"
base64 = "0.22.1"
rpassword = "7.4.0"
