[package]
name = "sls"
version = "0.1.0"
edition = "2021"

[dependencies]
sps2-hash = { path = "../../crates/hash" }
sps2-state = { path = "../../crates/state" }
sps2-config = { path = "../../crates/config" }

clap = { version = "4.5.47", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
colored = "3.0.0"
humansize = "2.1.3"
chrono = "0.4.41"
atty = "0.2.14"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }