[package]
name = "sls"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sps2-hash = { path = "../../crates/hash" }
sps2-state = { path = "../../crates/state" }
sps2-config = { path = "../../crates/config" }

clap = { version = "4.5.48", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
chrono = "0.4.42"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
libc = { version = "0.2.175", optional = false }
