[package]
name = "sps2"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Modern package manager for macOS ARM64"

[[bin]]
name = "sps2"
path = "src/main.rs"

[dependencies]
sps2-ops = { path = "../../crates/ops" }
sps2-events = { path = "../../crates/events" }
sps2-errors = { path = "../../crates/errors" }
sps2-types = { path = "../../crates/types" }
sps2-config = { path = "../../crates/config" }
sps2-net = { path = "../../crates/net" }
sps2-resolver = { path = "../../crates/resolver" }
sps2-state = { path = "../../crates/state" }
sps2-store = { path = "../../crates/store" }
sps2-index = { path = "../../crates/index" }
sps2-builder = { path = "../../crates/builder" }
sps2-platform = { path = "../../crates/platform" }

clap = { version = "4.5.43", features = ["derive", "color"] }
tokio = { workspace = true, features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
serde_json = { workspace = true }
comfy-table = "7.1.4"
console = "0.16.0"
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
