[package]
name = "spsv2-audit"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
spsv2-errors = { path = "../errors" }
spsv2-types = { path = "../types" }
spsv2-events = { path = "../events" }
spsv2-state = { path = "../state" }
spsv2-store = { path = "../store" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "sync"] }
sqlx = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
semver = { workspace = true }
reqwest = { workspace = true }
zip = "0.6"
tempfile = { workspace = true }
futures = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]