[package]
name = "sps2-audit"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sps2-errors = { path = "../errors" }
sps2-types = { path = "../types" }
sps2-events = { path = "../events" }
sps2-hash = { path = "../hash" }
sps2-state = { path = "../state" }
sps2-store = { path = "../store" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "sync"] }
sqlx = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
semver = { workspace = true }
reqwest = { workspace = true }
zip = "4.2.0"
tempfile = { workspace = true }
futures = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
