[package]
name = "sps2-builder"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sps2-errors = { path = "../errors" }
sps2-types = { path = "../types" }
sps2-events = { path = "../events" }
sps2-package = { path = "../package" }
sps2-manifest = { path = "../manifest" }
sps2-hash = { path = "../hash" }
sps2-resolver = { path = "../resolver" }
sps2-store = { path = "../store" }
sps2-net = { path = "../net" }
sps2-install = { path = "../install" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs", "process"] }
reqwest = { workspace = true }
# Starlark execution handled via sps2-package
tempfile = { workspace = true }
num_cpus = "1.17.0"
toml = { workspace = true }
minisign = "0.7.9"
async-trait = "0.1.83"
tar = "0.4.44"
async-compression = { version = "0.4.23", features = ["tokio", "zstd"] }
futures = "0.3.31"
dashmap = { workspace = true }
crossbeam = { workspace = true }
chrono = { workspace = true }
which = "6.0.0"
sysinfo = "0.32"
uuid = { version = "1.10", features = ["v4"] }
bitflags = "2.6"

[dev-dependencies]
tempfile = { workspace = true }
sps2-index = { path = "../index" }
filetime = "0.2.25"
zstd = "0.13.2"
