[package]
name = "sps2-builder"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sps2-errors = { path = "../errors" }
sps2-types = { path = "../types" }
sps2-events = { path = "../events" }
sps2-manifest = { path = "../manifest" }
sps2-hash = { path = "../hash" }
sps2-resolver = { path = "../resolver" }
sps2-store = { path = "../store" }
sps2-net = { path = "../net" }
sps2-install = { path = "../install" }
sps2-state = { path = "../state" }
sps2-config = { path = "../config" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs", "process"] }
reqwest = { workspace = true }
# YAML parsing dependencies
serde_yml = "0.0.12"
tempfile = { workspace = true }
num_cpus = "1.17.0"
toml = { workspace = true }
minisign = "0.7.9"
async-trait = "0.1.88"
tar = "0.4.44"
async-compression = { version = "0.4.25", features = [
    "tokio",
    "zstd",
    "gzip",
    "bzip2",
    "xz",
] }
futures = "0.3.31"
dashmap = { workspace = true }
crossbeam = { workspace = true }
chrono = { workspace = true }
which = "8.0.0"
sysinfo = "0.35.2"
uuid = { version = "1.17.0", features = ["v4"] }
bitflags = "2.9.1"
zip = "4.1.0"
rayon = "1.10.0"
ignore = { version = "0.4.23", features = [
    "simd-accel",
] } # ripgrep's fast walker
globset = "0.4.16"
bstr = "1.12.0" # binary‑safe search helpers
object = { version = "0.37.1", features = ["read_core", "write_core", "macho"] }
regex = "1.11.1"
thiserror = "2.0.12"
md-5 = "0.10.6"
sha2 = "0.10.9"

[dev-dependencies]
tempfile = { workspace = true }
sps2-index = { path = "../index" }
filetime = "0.2.25"
zstd = "0.13.3"
