[package]
name = "sps2-builder"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sps2-errors = { path = "../errors" }
sps2-types = { path = "../types" }
sps2-events = { path = "../events" }
sps2-hash = { path = "../hash" }
sps2-resolver = { path = "../resolver" }
sps2-store = { path = "../store" }
sps2-net = { path = "../net" }
sps2-install = { path = "../install" }
sps2-state = { path = "../state" }
sps2-config = { path = "../config" }
sps2-platform = { path = "../platform" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs", "process"] }
reqwest = { workspace = true }
# YAML parsing dependencies
serde_yaml2 = "0.1.3"
tempfile = { workspace = true }
num_cpus = "1.17.0"
toml = { workspace = true }
minisign = "0.7.9"
async-trait = "0.1.89"
tar = "0.4.44"
async-compression = { version = "0.4.30", features = [
    "tokio",
    "zstd",
    "gzip",
    "bzip2",
    "xz",
] }
futures = "0.3.31"
dashmap = { workspace = true }
crossbeam = { workspace = true }
chrono = { workspace = true }
which = "8.0.0"
sysinfo = "0.37.2"
uuid = { version = "1.18.1", features = ["v4"] }
bitflags = "2.10.0"
zip = "6.0.0"
rayon = "1.11.0"
ignore = { version = "0.4.23", features = [
    "simd-accel",
] } # ripgrep's fast walker
globset = "0.4.17"
bstr = "1.12.0" # binary‑safe search helpers
object = { version = "0.37.3", features = ["read_core", "write_core", "macho"] }
regex = "1.12.2"
thiserror = "2.0.17"
md-5 = "0.10.6"
sha2 = "0.10.9"

[dev-dependencies]
tempfile = { workspace = true }
sps2-index = { path = "../index" }
filetime = "0.2.26"
zstd = "0.13.3"
