[package]
name = "sps2-config"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sps2-errors = { path = "../errors" }
sps2-types = { path = "../types" }
serde = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
dirs = "6.0.0"
num_cpus = "1.17.0"

[dev-dependencies]
tempfile = { workspace = true }
