[package]
name = "sps2-drafter"
version = "0.1.0"
edition = "2021"

[dependencies]
# YAML serialization
serde_yml = "0.0.12"

# File system traversal and inspection
walkdir = "2.5.0"
regex = "1.11.1"

# Parsing metadata files
toml = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# Archive extraction
tar = "0.4.44"
flate2 = "1.1.2"
zip = "4.3.0"
async-compression = { version = "0.4.27", features = ["tokio", "gzip", "bzip2", "xz"] }

# Git operations
git2 = "0.20.2"

# Temporary directories and async operations
tempfile = "3.20.0"
tokio = { version = "1.46.0", features = ["full"] }

# Error handling
thiserror = "2.0.12"

# Internal workspace dependencies
sps2-net = { path = "../net" }
sps2-errors = { path = "../errors" }
sps2-hash = { path = "../hash" }
sps2-events = { path = "../events" }
sps2-types = { path = "../types" }