[package]
name = "sps2-drafter"
version = "0.1.0"
edition = "2021"

[dependencies]
# YAML serialization
serde_yaml2 = "0.1.3"

# File system traversal and inspection
walkdir = "2.5.0"
regex = "1.11.2"

# Parsing metadata files
toml = "0.9.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Archive extraction
tar = "0.4.44"
flate2 = "1.1.4"
zip = "5.1.1"
async-compression = { version = "0.4.30", features = ["tokio", "gzip", "bzip2", "xz"] }

# Git operations
git2 = "0.20.2"

# Temporary directories and async operations
tempfile = "3.22.0"
tokio = { version = "1.47.1", features = ["full"] }

# Error handling
thiserror = "2.0.17"

# Internal workspace dependencies
sps2-net = { path = "../net" }
sps2-errors = { path = "../errors" }
sps2-hash = { path = "../hash" }
sps2-events = { path = "../events" }
sps2-types = { path = "../types" }
sps2-platform = { path = "../platform" }
