[package]
name = "sps2-errors"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true, optional = true }
semver = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
minisign-verify = { workspace = true }

[features]
default = []
serde = ["dep:serde"]
