[package]
name = "sps2-events"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sps2-types = { path = "../types" }
tokio = { workspace = true, features = ["sync"] }
serde = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
tracing = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
