
[package]
name = "sps2-guard"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sps2-errors = { path = "../errors" }
sps2-types = { path = "../types" }
sps2-events = { path = "../events" }
sps2-state = { path = "../state" }
sps2-install = { path = "../install" }
sps2-hash = { path = "../hash" }
sps2-store = { path = "../store" }
sps2-config = { path = "../config" }
sps2-root = { path = "../root" }
serde = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
futures = "0.3"
walkdir = "2.5.0"
uuid = { workspace = true, features = ["v4"]}

[dev-dependencies]
tempfile = { workspace = true }
