
[package]
name = "sps2-guard"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sps2-errors = { path = "../errors" }
sps2-events = { path = "../events" }
sps2-state = { path = "../state" }
sps2-hash = { path = "../hash" }
sps2-store = { path = "../store" }
sps2-platform = { path = "../platform" }
serde = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
walkdir = "2.5.0"
uuid = { workspace = true, features = ["v4"]}

[dev-dependencies]
tempfile = { workspace = true }
