[package]
name = "sps2-install"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sps2-errors = { path = "../errors" }
sps2-types = { path = "../types" }
sps2-events = { path = "../events" }
sps2-net = { path = "../net" }
sps2-resolver = { path = "../resolver" }
sps2-root = { path = "../root" }
sps2-state = { path = "../state" }
sps2-store = { path = "../store" }
sps2-audit = { path = "../audit" }
serde = { workspace = true }
tokio = { workspace = true, features = ["fs", "process"] }
uuid = { workspace = true }
sqlx = { workspace = true }
dashmap = { workspace = true }
crossbeam = { workspace = true }
chrono = { workspace = true }
tempfile = { workspace = true }
libc = "0.2.172"

[dev-dependencies]
tempfile = { workspace = true }
sps2-index = { path = "../index" }
