[package]
name = "sps2-install"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sps2-errors = { path = "../errors" }
sps2-types = { path = "../types" }
sps2-events = { path = "../events" }
sps2-hash = { path = "../hash" }
sps2-net = { path = "../net" }
sps2-resolver = { path = "../resolver" }
sps2-root = { path = "../root" }
sps2-state = { path = "../state" }
sps2-store = { path = "../store" }
sps2-audit = { path = "../audit" }
sps2-manifest = { path = "../manifest" }
serde = { workspace = true }
tokio = { workspace = true, features = ["fs", "process", "io-util", "time"] }
uuid = { workspace = true }
sqlx = { workspace = true }
dashmap = { workspace = true }
crossbeam = { workspace = true }
chrono = { workspace = true }
tempfile = { workspace = true }
libc = "0.2.174"
toml = { workspace = true }
async-compression = { version = "0.4.25", features = ["tokio", "zstd"] }
tar = { workspace = true }
futures = { workspace = true }
blake3 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
sps2-index = { path = "../index" }
toml = { workspace = true }
