[package]
name = "spsv2-manifest"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
spsv2-errors = { path = "../errors" }
spsv2-types = { path = "../types" }
spsv2-config = { path = "../config" }
spsv2-hash = { path = "../hash" }
serde = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
semver = { workspace = true }
tokio = { workspace = true, features = ["fs"] }

[dev-dependencies]
tempfile = { workspace = true }