[package]
name = "sps2-net"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sps2-resources = { path = "../resources" }
sps2-errors = { path = "../errors" }
sps2-types = { path = "../types" }
sps2-events = { path = "../events" }
sps2-hash = { path = "../hash" }
sps2-signing = { path = "../signing" }
sps2-config = { path = "../config" }
blake3 = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
reqwest = { workspace = true }
futures = "0.3.31"
bytes = "1.10.1"
url = "2.5.4"
rand = "0.9.2"
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
httpmock = "0.7.0"
tokio = { workspace = true, features = ["test-util", "macros"] }
