[package]
name = "sps2-net"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sps2-errors = { path = "../errors" }
sps2-types = { path = "../types" }
sps2-events = { path = "../events" }
sps2-hash = { path = "../hash" }
sps2-config = { path = "../config" }
blake3 = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
reqwest = { workspace = true }
futures = "0.3.31"
bytes = "1.10.1"
url = "2.5.7"
rand = "0.9.2"
serde = { workspace = true }
serde_json = { workspace = true }
minisign-verify = "0.2.4"
minisign = "0.7.9"
hex = "0.4.3"
base64 = "0.22.1"

[dev-dependencies]
tempfile = { workspace = true }
httpmock = "0.8.2"
tokio = { workspace = true, features = ["test-util", "macros"] }
