[package]
name = "sps2-ops"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sps2-errors = { path = "../errors" }
sps2-types = { path = "../types" }
sps2-events = { path = "../events" }
sps2-net = { path = "../net" }
sps2-resolver = { path = "../resolver" }
sps2-state = { path = "../state" }
sps2-store = { path = "../store" }
sps2-install = { path = "../install" }
sps2-builder = { path = "../builder" }
sps2-index = { path = "../index" }
sps2-audit = { path = "../audit" }
sps2-hash = { path = "../hash" }
sps2-drafter = { path = "../drafter" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
uuid = { workspace = true }
chrono = { workspace = true }
tempfile = { workspace = true }
minisign-verify = "0.2.4"
hex = "0.4.3"

[dev-dependencies]
tempfile = { workspace = true }
