[package]
name = "spsv2-package"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
spsv2-errors = { path = "../errors" }
spsv2-types = { path = "../types" }
spsv2-hash = { path = "../hash" }
rhai = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }