[package]
name = "spsv2-package"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
spsv2-errors = { path = "../errors" }
spsv2-types = { path = "../types" }
spsv2-hash = { path = "../hash" }
starlark = "0.12"
starlark_derive = "0.12"
allocative = "0.3"
serde = { workspace = true }
tokio = { workspace = true }
num_cpus = "1.16"
anyhow = "1.0"

[dev-dependencies]
tempfile = { workspace = true }