[package]
name = "sps2-package"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sps2-errors = { path = "../errors" }
sps2-types = { path = "../types" }
sps2-hash = { path = "../hash" }
starlark = "0.13.0"
starlark_derive = "0.13.0"
allocative = "0.3.4"
serde = { workspace = true }
tokio = { workspace = true }
num_cpus = "1.17.0"
anyhow = "1.0.98"

[dev-dependencies]
tempfile = { workspace = true }
