[package]
name = "sps2-platform"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sps2-errors = { path = "../errors" }
sps2-events = { path = "../events" }

async-trait = "0.1.89"
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
libc = "0.2.175"
serde_json = { workspace = true }
dirs = "6.0.0"
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = []